[package]
name = "no_std_bincode"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
bincode = { version = "1", default-features = false }
bytes = { version = "1", default-features = false, features = ["serde"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }