[package]
name = "no_std_postcard_heapless"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
postcard = { version = "1.0", default-features = false, features = ["heapless"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
heapless = { version = "0.7", default-features = false, features = ["serde"] }
